<resources>
    <string name="app_name">Calculadora 2</string>
    <string name="Igual">=</string>
    <string name="Soma">+</string>
    <string name="Sub">-</string>
    <string name="Apaga">C</string>
    <string name="Ponto">.</string>
    <string name="Mul">*</string>
    <string name="Resultado">Resultado</string>
    <string name="Div">/</string>
    <string name="Num1">1</string>
    <string name="Num0">0</string>
    <string name="Num2">2</string>
    <string name="Num3">3</string>
    <string name="Num4">4</string>
    <string name="Num5">5</string>
    <string name="Num6">6</string>
    <string name="Num7">7</string>
    <string name="Num8">8</string>
    <string name="Num9">9</string>
    <string name="teste">teste</string>


</resources>